Fri Feb 11 07:08:12 2005  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/lex.yy.cpp.diff:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/y.tab.h:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/y.tab.cpp.diff:
        * TAO_IDL/tao_idl.mpc:

          Brought the ll and yy files back into sync with the cpp files that
          had been modified independently.  I also added targets to the mpc
          file to regenerate lex.yy.cpp, y.tab.cpp and fe_lookup.cpp based
          on the original Makefile targets.  The generated code (aside from
          whitespace) is virtually the same as the previous version.

Fri Feb 11 10:08:39 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Services.pidl:
          Updated regeneration instructions

Fri Feb 11 09:41:39 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Forwarding/client.cpp:
          When an exception is caught print out that it is caught in the
          client.

        * examples/POA/Forwarding/server.cpp:
          When an exception is caught print out that it is caught in the
          server. Moved the parsing of the arguments after ORB::init so
          that without problems additional orb arguments can be passed

Fri Feb 11 09:19:39 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/run_test.pl:
        * orbsvcs/tests/AVStreams/Multicast/run_test.pl:
        * orbsvcs/tests/AVStreams/Multicast_Full_Profile/run_test.pl:
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/run_test.pl:
          When the spawn of the naming service fails exit directly from the
          test script instead of waiting on the timeout of the ior file

        * orbsvcs/tests/Notify/Basic/run_test.pl:
        * orbsvcs/tests/Notify/Blocking/run_test.pl:
        * orbsvcs/tests/Notify/Discarding/run_test.pl:
        * orbsvcs/tests/Notify/Lanes/run_test.pl: