@@ -10,44 +10,45 @@ use PerlACE::Run_Test;
 
 $experiment_timeout = 60;
 $startup_timeout = 60;
+$shutdown_timeout = 10;
 $notify_ior = PerlACE::LocalFile ("notify.ior");
 $naming_ior = PerlACE::LocalFile ("naming.ior");
 $supplier_ior = PerlACE::LocalFile ("supplier.ior");
 $status = 0;
 
-@tests = 
+@tests =
   (
    {
     description => "no threads",
-    config => "notify_nothreads$PerlACE::svcconf_ext", 
+    config => "notify_nothreads$PerlACE::svcconf_ext",
     supplier => " -c 10 -f",
     consumer => " -c 2 -f -e 48",
    },
    {
     description => "multi-threaded dispatching",
-    config => "notify_mtdispatching$PerlACE::svcconf_ext", 
+    config => "notify_mtdispatching$PerlACE::svcconf_ext",
     supplier => " ",
     consumer => " ",
    },
    {
     description => "multi-threaded proxy consumers",
-    config => "notify_mtsource$PerlACE::svcconf_ext", 
+    config => "notify_mtsource$PerlACE::svcconf_ext",
     supplier => " ",
     consumer => " -c 2 -f",
    },
    {
     description => "multi-threaded proxy suppliers",
-    config => "notify_mtlistener$PerlACE::svcconf_ext", 
+    config => "notify_mtlistener$PerlACE::svcconf_ext",
     supplier => " -c 10 -f",
     consumer => " -c 1 -e 60",
    },
   );
 
-@tests2 = 
+@tests2 =
   (
    {
     description => "multi-threaded dispatching",
-    config => "notify_mtdispatching$PerlACE::svcconf_ext", 
+    config => "notify_mtdispatching$PerlACE::svcconf_ext",
     supplier => " ",
     consumer => " ",
    }
@@ -84,20 +85,20 @@ for $test (@tests)
     $args = $Notification->Arguments ();
     print STDERR "Running Notification with arguments: $args\n";
     $Notification->Spawn ();
-    
+
     if (PerlACE::waitforfile_timed ($notify_ior, $startup_timeout) == -1) {
       print STDERR "ERROR: waiting for the notify service to start\n";
       $Notification->Kill ();
       $Naming->Kill ();
       exit 1;
     }
-    
+
     unlink $supplier_ior;
     $Supplier->Arguments ($Supplier->Arguments () . $test->{supplier});
     $args = $Supplier->Arguments ();
     print STDERR "Running Supplier with arguments: $args\n";
     $Supplier->Spawn ();
-    
+
     if (PerlACE::waitforfile_timed ($supplier_ior, $startup_timeout) == -1) {
       print STDERR "ERROR: waiting for the supplier to start\n";
       $Supplier->Kill ();
@@ -105,13 +106,13 @@ for $test (@tests)
       $Naming->Kill ();
       exit 1;
     }
-    
+
     $Consumer->Arguments ($Consumer->Arguments () . $test->{consumer});
     $args = $Consumer->Arguments ();
     print STDERR "Running Consumer with arguments: $args\n";
     $status = $Consumer->SpawnWaitKill ($experiment_timeout);
 
-    if ($status != 0) 
+    if ($status != 0)
       {
         print STDERR "ERROR: Consumer returned $status\n";
         $Supplier->Kill ();
@@ -120,13 +121,13 @@ for $test (@tests)
         exit 1;
       }
 
-    $Supplier->Kill ();
+    $Supplier->WaitKill ($shutdown_timeout);
     unlink $supplier_ior;
 
     $Notification->Kill ();
     unlink $notify_ior;
   }
-    
+
 $Naming->Kill ();
 unlink $naming_ior;
 
